@startuml
'https://plantuml.com/sequence-diagram

class UserModuleMapping {
}

class UserModuleMappingList {
}

class UserUniversityList {
    - myModules:UserModuleMappingList
    - universityName:String
    + UserUniversityList(universityName:String)
    + addModule(input:UserModuleMapping)
    + deleteModuleByPuCode(puCode:String)
    + deleteModule(index:int)
    + displayModules()
    + getMyModules()
    + setMyModules(myModules:UserModuleMappingList)
    + getUniversityName
    + setUniversityName(universityName:String)
}

class UserUniversityListManager {
    - myManager:HashMap<String, UserUniversityList>
    - myFavourites:HashMap<String, UserUniversityList>
    - deletedModulesList:UserDeletedModules
    - logger:Logger
    + UserUniversityListManager()
    + UserUniversityListManager(fileContent:String)
    + getUserDeletedModules()
    + createList(input:String)
    + displayAll()
    + displayFavourites()
    + displayUniversity(input:String)
    + foundKeyAll(inputSchool:String)
    + foundKeyFavourites(inputSchool:String)
    + addModule(inputSchool:String, inputModule:UserModuleMapping)
    + deleteModule(inputSchool:String, puCode:String)
    + deleteList(inputSchool:String)
    + getList(input:String)
    + getMyManager()
    + getMyFavourites()
    + addFavourite(input:String)
    + deleteFavourite(input:String)
}

UserUniversityListManager .> UserModuleMapping
UserUniversityListManager " * " --> " * " UserUniversityList :> Manages multiple UserUniversityLists
UserUniversityList ..> UserModuleMapping
UserUniversityList " * " --> "0..1" UserModuleMappingList :> Manages a UserModuleMappingList
@enduml